[metadata]
name = smiler
description = Emoji for humans
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Yehuda Chikvashvili
author_email = yehudaac1@gmail.com
url = https://github.com/iyehuda/smiler
keywords =
    smile
    emoji
    face
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python

[options]
zip_safe = True
packages = find:
setup_requires =
    setuptools >= 30.3.0
    setuptools_scm

[options.entry_points]
console_scripts =
    smile = smiler:smile
